boreal/tests/assets/invalid_files/compilation/invalid_type.yar
// [error: expression has an invalid type]
rule a {
    condition:
        uint16("str") == 3
}
